--- a/src/assets/stylesheets/componentStyles/_small-cell.scss
+++ b/src/assets/stylesheets/componentStyles/_small-cell.scss
@@ -32,7 +32,7 @@
       max-width: 98%;
       .title-tab {
         .title-block {
-          color: #000000;
+          color: $Shade_10;
           font-family: Inter;
           font-style: normal;
           font-weight: normal;
@@ -62,7 +62,7 @@
       position: absolute;
       height: 40px;
       width: 40px;
-      background: #0063f7;
+      background: $primaryColor;
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -73,8 +73,8 @@
       position: absolute;
       height: 60px;
       width: 60px;
-      border: 1px solid black;
-      background: #edf4ff;
+      border: 1px solid $Shade_10;
+      background: $Shade_0;
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -82,18 +82,18 @@
       cursor: pointer;
     }
     &__device-icon {
-      color: white;
+      color: $SecondaryColor;
     }
     &__cell-icon {
-      color: white;
+      color: $SecondaryColor;
     }
   }
 
   &__device-icon {
-    color: white;
+    color: $SecondaryColor;
   }
   &__cell-icon {
-    // color: white;
+    // color: $SecondaryColor;
   }
 
   &__menu {
@@ -110,25 +110,25 @@
       text-align: center;
     }
     &__details {
-      color: #0063f7;
+      color: $primaryColor;
       margin-top: auto;
     }
     &__site {
-      color: #3c4257;
+      color: $Shade_11;
       font-weight: 600;
       &--big {
         font-size: 16px;
       }
     }
     &__small-cell {
-      color: white;
+      color: $SecondaryColor;
       display: flex;
       align-items: center;
       justify-content: center;
       min-width: 86px;
       min-height: 28px;
       border-radius: 27px;
-      background: #06d6a0;
+      background: $AlertSuccess;
       gap: 5px;
       font-size: 600;
       align-self: center;
@@ -137,7 +137,7 @@
     &__device {
       font-weight: 600;
       font-size: 16px;
-      color: #0063f7;
+      color: $primaryColor;
     }
   }
 
@@ -147,7 +147,7 @@
     gap: 20px;
     margin-top: 20px;
     &__item {
-      background: white;
+      background: $SecondaryColor;
       min-height: 80px;
       width: 100%;
       border-radius: 8px;
@@ -162,12 +162,12 @@
           width: 55px;
           height: 55px;
           border-radius: 50%;
-          background: #edf4ff;
+          background: $Shade_0;
           display: flex;
           align-items: center;
           justify-content: center;
           &--icon {
-            color: #0063f7;
+            color: $primaryColor;
             height: 30px;
             width: 30px;
           }
@@ -177,7 +177,7 @@
           gap: 5px;
           &--label {
             font-size: 12px;
-            color: black;
+            color: $Shade_10;
           }
           &--text {
             font-size: 14px;
@@ -190,28 +190,28 @@
           justify-content: center;
           min-width: 85px;
           height: 25px;
-          color: white;
+          color: $SecondaryColor;
           font-size: 14px;
           font-weight: 500;
-          background: #06d6a0;
+          background: $AlertSuccess;
           border-radius: 45px;
           padding: 0px 10px;
           &--alert {
-            background: #ef233c;
+            background: $AlertCritical;
           }
         }
         &__details {
           font-size: 14px;
           font-weight: 500;
-          color: #0063f7;
+          color: $primaryColor;
           cursor: pointer;
         }
         &__close {
-          color: #ef233c;
+          color: $AlertCritical;
         }
       }
       &--sub {
-        border-top: 1px solid #97c1ff;
+        border-top: 1px solid $Shade_2;
         margin-top: 10px;
         padding: 30px;
         margin-inline-end: -30px;
@@ -220,7 +220,7 @@
         display: grid;
         gap: 30px;
         &__graphs {
-          background: #f0f3fa;
+          background: $Shade_1;
           border-radius: 6px;
           padding: 30px;
           min-height: 175px;
@@ -233,16 +233,16 @@
             font-size: 14px;
             font-weight: 500;
             &--title {
-              color: #3c4257;
+              color: $Shade_11;
             }
             &--increment {
-              color: #06d6a0;
+              color: $AlertSuccess;
               justify-self: end;
               display: flex;
               align-items: center;
             }
             &--decrement {
-              color: #ef233c;
+              color: $AlertCritical;
               justify-self: end;
               display: flex;
               align-items: center;
@@ -261,11 +261,11 @@
           grid-template-columns: repeat(4, 25%);
           &__count {
             &--label {
-              color: #a3a3a3;
+              color: $Shade_12;
               font-size: 12px;
             }
             &--text {
-              color: #3c4257;
+              color: $Shade_11;
               font-size: 14px;
               font-weight: 500;
             }
@@ -276,11 +276,11 @@
           grid-template-columns: repeat(4, 25%);
           &__connection {
             &--label {
-              color: #a3a3a3;
+              color: $Shade_12;
               font-size: 12px;
             }
             &--text {
-              color: #0063f7;
+              color: $primaryColor;
               font-size: 14px;
               font-weight: 500;
             }
@@ -291,12 +291,12 @@
           gap: 50px;
           justify-content: end;
           &__decomission {
-            color: #fb8500;
+            color: $AlertMedium;
             font-weight: 500;
             font-size: 14px;
             cursor: pointer;
             &--permanent {
-              color: #ef233c;
+              color: $AlertCritical;
             }
           }
         }
