--- a/src/assets/stylesheets/componentStyles/dashboardStyle/_dashboard.scss
+++ b/src/assets/stylesheets/componentStyles/dashboardStyle/_dashboard.scss
@@ -4,7 +4,7 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 .bg-gray {
-  background-color: #eff1f3;
+  background-color: $general-bg;
   padding: 30px 0 5px;
 }
 .bottom_bx {
@@ -31,13 +31,13 @@
         .chart-bx-h {
           font-size: 14px;
           text-align: right;
-          color: #0063f7;
+          color: $primaryColor;
           margin-bottom: 10px;
         }
         .highlights-txt {
           font-size: 14px;
           text-align: left;
-          color: #0063f7;
+          color: $primaryColor;
           margin-bottom: 8px;
         }
         .highlighted-counting {
@@ -47,7 +47,7 @@
             margin-right: 10px;
             width: 25px;
             height: 25px;
-            background: #edf4ff;
+            background: $general-bg;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -64,7 +64,7 @@
               }
             }
             .no-highlights {
-              color: #0063f7;
+              color: $primaryColor;
             }
           }
         }
@@ -72,7 +72,7 @@
           margin-bottom: 5px;
           p {
             font-size: 28px;
-            color: #000;
+            color: $Shade_10;
             margin-bottom: 0;
             span {
               margin-right: 10px;
@@ -116,11 +116,11 @@
           span {
             a {
               font-size: 14px;
-              color: #0063f7;
+              color: $primaryColor;
               text-decoration: none;
             }
             .disable-expand {
-              color: #a3a3a3;
+              color: $buttonMedium;
             }
           }
         }
@@ -138,8 +138,8 @@
           }
         }
         .mat-button-toggle-checked {
-          background: #0063f7;
-          color: #fff;
+          background: $primaryColor;
+          color: $SecondaryColor;
           border: none;
           border-radius: 8px;
           min-width: 90px;
@@ -149,8 +149,8 @@
           }
         }
         .btn-tabs-second {
-          background: #fff;
-          color: #6ea6ff;
+          background: $SecondaryColor;
+          color: $Shade_3;
           border: none;
           border-radius: 8px;
           min-width: 80px;
