--- a/src/assets/stylesheets/componentStyles/dashboardStyle/_sites.scss
+++ b/src/assets/stylesheets/componentStyles/dashboardStyle/_sites.scss
@@ -38,20 +38,20 @@
   border-radius: 12px 12px 0 0 !important;
   h3 {
     margin-bottom: 0;
-    color: #fff;
+    color: $SecondaryColor;
   }
   .alert-bx {
     padding: 5px 10px;
-    background: red;
-    color: #fff;
+    background: $AlertCritical;
+    color: $SecondaryColor;
     border-radius: 40px;
     min-width: 100px;
     text-align: center;
   }
   .success-bx {
     padding: 5px 10px;
-    background: #06d6a0;
-    color: #fff;
+    background: $AlertSuccess;
+    color: $SecondaryColor;
     border-radius: 40px;
     min-width: 100px;
     text-align: center;
@@ -75,7 +75,7 @@
 
   .card-icon {
     margin-right: 5px;
-    background: #edf4ff;
+    background: $general-bg;
     border-radius: 50%;
     width: 26px;
     height: 26px;
@@ -96,7 +96,7 @@
       font-size: 14px;
       span {
         font-style: italic;
-        color: #d3d3d3;
+        color: $general-bg;
         display: block;
         font-size: 11px;
       }
@@ -105,7 +105,7 @@
 }
 
 .card-selected {
-  border: 2px solid #0063f7;
+  border: 2px solid $primaryColor;
   box-shadow: 4px 8px 10px rgba(41, 44, 52, 0.2);
 }
 .card-stats {
