--- a/src/assets/stylesheets/componentStyles/dashboardStyle/_slice.scss
+++ b/src/assets/stylesheets/componentStyles/dashboardStyle/_slice.scss
@@ -69,8 +69,8 @@
       .conected-devices-bx {
         display: flex;
         align-items: center;
-        background: #fff;
-        color: #000;
+        background: $SecondaryColor;
+        color: $Shade_10;
         border: 1px solid #ab50de;
         border-radius: 50px;
         padding: 5px 10px;
@@ -79,7 +79,7 @@
         margin-top: 12px;
         .card-icon {
           margin-right: 5px;
-          background: #edf4ff;
+          background: $general-bg;
           border-radius: 50%;
           width: 26px;
           height: 26px;
@@ -116,9 +116,9 @@
       .conected-devices-bx {
         display: flex;
         align-items: center;
-        background: #fff;
-        color: #000;
-        border: 1px solid #fb8500;
+        background: $SecondaryColor;
+        color: $Shade_10;
+        border: 1px solid $AlertMedium;
         border-radius: 50px;
         padding: 5px 10px;
         transform-style: preserve-3d;
@@ -130,7 +130,7 @@
         }
         .card-icon {
           margin-right: 5px;
-          background: #edf4ff;
+          background: $general-bg;
           border-radius: 50%;
           width: 26px;
           height: 26px;
@@ -169,7 +169,7 @@
         width: 100%;
       }
       .graph-header {
-        background: #0530ad;
+        background: $Shade_7;
         display: flex;
         justify-content: space-between;
         padding: 15px 30px;
@@ -187,7 +187,7 @@
           align-items: center;
           flex: 3;
           .card-icon {
-            background: #0062ff;
+            background: $Shade_5;
             width: 26px;
             height: 26px;
             border-radius: 50%;
@@ -201,18 +201,18 @@
           }
           h3 {
             margin-bottom: 0;
-            color: #fff;
+            color: $SecondaryColor;
             width: max-content;
           }
         }
         .text-red {
-          color: #ef233c;
+          color: $AlertCritical;
         }
         .text-blue {
-          color: #0063f7;
+          color: $primaryColor;
         }
         .graph-alert-h {
-          background: #fff;
+          background: $SecondaryColor;
           padding: 5px;
           border-radius: 5px;
           display: flex;
@@ -245,7 +245,7 @@
               }
             }
             button {
-              color: #859cbe;
+              color: $buttonMedium;
               border-bottom: 2px solid transparent;
               max-height: 10px;
               display: flex;
@@ -254,24 +254,24 @@
               padding: 3px 0;
             }
             // .active {
-            //   color: #fff;
+            //   color: $SecondaryColor;
             //   background: transparent;
             //   border: 0;
-            //   border-bottom: 2px solid #fff !important;
+            //   border-bottom: 2px solid $SecondaryColor !important;
             //   width: 5px;
             //   button {
-            //     color: #fff;
+            //     color: $SecondaryColor;
             //   }
             // }
             .mat-button-toggle-checked {
-              color: #fff;
+              color: $SecondaryColor;
               background: transparent;
               border: 0;
-              border-bottom: 2px solid #fff !important;
+              border-bottom: 2px solid $SecondaryColor !important;
               // width: 5px;
               height: 100%;
               button {
-                color: #fff;
+                color: $SecondaryColor;
               }
             }
             .mat-button-toggle-group-appearance-standard {
@@ -281,8 +281,8 @@
         }
       }
       .graph-content-bx {
-        background-color: #0063f7;
-        color: #fff;
+        background-color: $primaryColor;
+        color: $SecondaryColor;
         border-radius: 0 0 16px 16px;
         .main-accordion-graph {
           display: flex;
@@ -360,7 +360,7 @@
         align-items: center;
         justify-content: space-evenly;
         margin: 0 10px;
-        color: #0063f7;
+        color: $primaryColor;
         font-size: 14px;
         font-weight: 500;
       }
@@ -370,7 +370,7 @@
         align-items: center;
         justify-content: space-evenly;
         margin: 0 10px;
-        color: #ef233c;
+        color: $AlertCritical;
         font-size: 14px;
         font-weight: 500;
       }
@@ -391,7 +391,7 @@
         .accordion-header {
           margin-bottom: 0;
           button {
-            background: #edf4ff;
+            background: $general-bg;
             border: none;
             border-radius: 8px 8px 0 0;
           }
@@ -406,10 +406,10 @@
             }
             .add_btn {
               margin-right: 10px;
-              color: #0063f7;
+              color: $primaryColor;
             }
             .remove_btn {
-              color: #ef233c;
+              color: $AlertCritical;
             }
           }
           .collapsed {
@@ -419,7 +419,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            color: #3c4257;
+            color: $Shade_11;
             font-size: 16px;
             font-weight: 600;
             padding: 10px 15px;
@@ -430,7 +430,7 @@
               display: none;
             }
             .card-icon {
-              background-color: #fff;
+              background-color: $SecondaryColor;
               border-radius: 50%;
               width: 26px;
               height: 26px;
@@ -453,24 +453,24 @@
           // &::-webkit-scrollbar {
           //   width: 3px;
           //   height: 3px;
-          //   background-color: #0d6efd;
+          //   background-color: $Shade_5;
           // }
           &::-webkit-scrollbar {
             width: 2px;
-            background-color: #0d6efd;
+            background-color: $Shade_5;
           }
           &::-webkit-scrollbar-track {
-            background: #f1f1f1;
+            background: $Shade_0;
           }
           &::-webkit-scrollbar-thumb {
-            background: #0d6efd;
+            background: $Shade_5;
           }
           &::-webkit-scrollbar-thumb:hover {
-            background: #0d6efd;
+            background: $Shade_5;
           }
           .ctm-border-bottom {
             &:before {
-              border-bottom: 1px solid #c9deff;
+              border-bottom: 1px solid $Shade_1;
               width: 100%;
               position: absolute;
               left: 0;
@@ -500,7 +500,7 @@
               min-width: 50px;
               width: auto;
               .camera_icon {
-                background-color: #edf4ff;
+                background-color: $general-bg;
                 width: 26px;
                 height: 26px;
                 border-radius: 50%;
@@ -521,7 +521,7 @@
                 padding: 6px 0 6px 6px;
               }
               .card-icon {
-                background-color: #edf4ff;
+                background-color: $general-bg;
                 width: 26px;
                 height: 26px;
                 border-radius: 50%;
@@ -540,7 +540,7 @@
                 margin-bottom: 0;
                 &:before {
                   content: "";
-                  border-bottom: 1px solid #000;
+                  border-bottom: 1px solid $Shade_10;
                 }
               }
             }
@@ -552,11 +552,11 @@
               position: relative;
               z-index: 1;
               p {
-                color: #fb8500;
+                color: $AlertMedium;
                 margin-bottom: 0;
               }
               span {
-                color: #0063f7;
+                color: $primaryColor;
               }
             }
           }
@@ -577,7 +577,7 @@
         width: 100%;
       }
       .graph-header {
-        background: #0530ad;
+        background: $Shade_7;
         display: flex;
         justify-content: space-between;
         padding: 15px;
@@ -611,7 +611,7 @@
             max-width: 100%;
           }
           .card-icon {
-            background: #0062ff;
+            background: $Shade_5;
             width: 26px;
             height: 26px;
             border-radius: 50%;
@@ -625,19 +625,19 @@
           }
           h3 {
             margin-bottom: 0;
-            color: #fff;
+            color: $SecondaryColor;
             width: max-content;
             margin-right: 10px;
           }
         }
         .text-red {
-          color: #ef233c;
+          color: $AlertCritical;
         }
         .text-blue {
-          color: #0063f7;
+          color: $primaryColor;
         }
         .graph-alert-h {
-          background: #fff;
+          background: $SecondaryColor;
           padding: 5px;
           border-radius: 5px;
           display: flex;
@@ -674,7 +674,7 @@
               }
             }
             button {
-              color: #859cbe;
+              color: $buttonMedium;
               border-bottom: 2px solid transparent;
               max-height: 10px;
               display: flex;
@@ -683,24 +683,24 @@
               padding: 7px 0;
             }
             // .active {
-            //   color: #fff;
+            //   color: $SecondaryColor;
             //   background: transparent;
             //   border: 0;
-            //   border-bottom: 2px solid #fff !important;
+            //   border-bottom: 2px solid $SecondaryColor !important;
             //   width: 5px;
             //   button {
-            //     color: #fff;
+            //     color: $SecondaryColor;
             //   }
             // }
             .mat-button-toggle-checked {
-              color: #fff;
+              color: $SecondaryColor;
               background: transparent;
               border: 0;
-              border-bottom: 2px solid #fff !important;
+              border-bottom: 2px solid $SecondaryColor !important;
               // width: 5px;
               height: 100%;
               button {
-                color: #fff;
+                color: $SecondaryColor;
               }
             }
             .mat-button-toggle-group-appearance-standard .mat-button-toggle {
@@ -737,8 +737,8 @@
         }
       }
       .graph-content-bx {
-        background-color: #0063f7;
-        color: #fff;
+        background-color: $primaryColor;
+        color: $SecondaryColor;
         border-radius: 0 0 16px 16px;
         .main-accordion-graph {
           display: block;
@@ -773,8 +773,8 @@
       padding: 15px 10px;
       margin-top: 20px;
       border-radius: 4px;
-      background-color: #0063f7;
-      color: #fff;
+      background-color: $primaryColor;
+      color: $SecondaryColor;
       position: absolute;
       top: 440px;
       // width: 360px;
@@ -928,7 +928,7 @@
   // padding-right: 60px;
   // padding-top: 78px;
   .accordion-item {
-    border: 1px solid #fb8500 !important;
+    border: 1px solid $AlertMedium !important;
     .accordion-header {
       .accordion-button {
         justify-content: center;
@@ -950,7 +950,7 @@
         .left-bx {
           // margin-bottom: 10px !important;
           @media only screen and (max-width: 1199px) {
-            white-space: nowrap;
+            $SecondaryColor-space: nowrap;
             width: 100px;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -965,7 +965,7 @@
   }
   .product-detail {
     &:before {
-      border-bottom: 1px solid #c9deff;
+      border-bottom: 1px solid $Shade_1;
       width: 100%;
       position: absolute;
       left: 0;
@@ -1050,7 +1050,7 @@
       position: absolute;
       height: 40px;
       width: 40px;
-      background: #0063f7;
+      background: $primaryColor;
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -1062,7 +1062,7 @@
       height: 60px;
       width: 60px;
       border: 1px solid black;
-      background: #edf4ff;
+      background: $general-bg;
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -1070,10 +1070,10 @@
       cursor: pointer;
     }
     &__device-icon {
-      color: white;
+      color: $SecondaryColor;
     }
     &__cell-icon {
-      color: white;
+      color: $SecondaryColor;
     }
   }
 }
